log
Wed 20 Mar 2024 11:53:35 PM UTC: 
 tests:  0|5
total_score: 0/70
dc9aa57
Wed 20 Mar 2024 11:56:20 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
fcbbd6d
Thu 21 Mar 2024 12:00:28 AM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
e6782f2
Thu 21 Mar 2024 12:09:34 AM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
b578376
Thu 21 Mar 2024 12:10:46 AM UTC: 
 exercises.c | 20 +++++++-------------
 1 file changed, 7 insertions(+), 13 deletions(-)
 tests:  0|0
fc89ccd
Thu 21 Mar 2024 12:15:59 AM UTC: 
 exercises.c | 17 ++++++++++-------
 1 file changed, 10 insertions(+), 7 deletions(-)
 tests:  2|3
total_score: 20/70
0856cb3
Thu 21 Mar 2024 12:18:06 AM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
5ba0aae
Thu 21 Mar 2024 12:19:16 AM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
b27d663
Thu 21 Mar 2024 12:20:23 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
8098566
Thu 21 Mar 2024 12:20:39 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
148e693
Thu 21 Mar 2024 12:22:28 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
c4df373
Thu 21 Mar 2024 12:22:42 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:14: error: invalid use of incomplete typedef ‘Stack’ {aka ‘List’}
   96 |     push(P2, *aux2);
      |              ^~~~~
Compilation failed
f87726b
Thu 21 Mar 2024 12:25:26 AM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
b0ff499
Thu 21 Mar 2024 12:28:29 AM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 30/70
ac88cc6
